[tool.poetry]
name = "twitter_user_tweet_crawler"
version = "1.0.0"
description = ""
authors = ["kaesinol <keiplyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.0"
loguru = "^0.7.2"
emoji = "^2.8.0"
html2text = "^2020.1.16"
requests = "^2.31.0"
rich = "^13.6.0"
sqlalchemy = "^2.0.23"
pyyaml = "^6.0.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
