[tool.poetry]
name = "twitter_user_tweet_crawler"
version = "1.1.0"
description = ""
authors = ["kaesinol <keiplyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.0"
loguru = "^0.7.2"
emoji = "^2.8.0"
html2text = "^2020.1.16"
requests = "^2.31.0"
rich = "^13.6.0"
sqlalchemy = "^2.0.23"
pyyaml = "^6.0.1"
lxml = "^4.9.3"



[tool.pdm.build]
includes = []
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "kaesinol", email = "keiplyer@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "selenium<5.0.0,>=4.15.0",
    "loguru<1.0.0,>=0.7.2",
    "emoji<3.0.0,>=2.8.0",
    "html2text<2021.0.0,>=2020.1.16",
    "requests<3.0.0,>=2.31.0",
    "rich<14.0.0,>=13.6.0",
    "sqlalchemy<3.0.0,>=2.0.23",
    "pyyaml<7.0.0,>=6.0.1",
    "lxml<5.0.0,>=4.9.3",
    "schedule>=1.2.2",
]
name = "twitter_user_tweet_crawler"
version = "1.1.0"
description = ""
readme = "README.md"
